compiler/testData/checkerWithErrorTypes/quick/backingField/ReadNonexistentPropertyInAnonymous.jet
class Cl() {
    {
        val x = <!UNRESOLVED_REFERENCE!>$a<!>
    }
}
